# movieapi

Documents/movieapi/: Cargo.toml
Documents/movieapi/src/: main.rs
Documents/movieapi/src/authenticate/: handlers.rs  models.rs
Documents/movieapi/src/comments/: handler.rs  models.rs
Documents/movieapi/src/movie/: handlers.rs  models.rs
