[package]
name = "movieapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
mongodb = { version = "2.7.1", features = []}
serde = { version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"]} 
tower-http = { version = "0.4.4", features = ['cors']}
